--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "postcss": "^8.5.4",
+    "prisma": "^6.9.0",
     "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.0"
   }
