onboarding by sp

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tabs": "^1.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "hooks": "^0.3.2",
     "inngest": "^3.38.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
@@ -35,6 +36,7 @@
     "react-hook-form": "^7.57.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
+    "use-fetch": "^0.0.7",
     "zod": "^3.25.56"
   },
   "devDependencies": {
