--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
+    "@uiw/react-md-editor": "^4.0.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2pdf.js": "^0.10.3",
     "inngest": "^3.38.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
